DiaFlux changes * Renamed Go to -> Open * Aligned icon in open tool. * Fixed layout of change notes * Added unload conditions to editor * Removed duplicate tools to open flow

--- a/KnowWE/KnowWE-Plugin-DiaFlux/src/main/resources/webapp/cc/flow/flowchart.css
+++ b/KnowWE/KnowWE-Plugin-DiaFlux/src/main/resources/webapp/cc/flow/flowchart.css
@@ -21,3 +21,7 @@
 	white-space: normal;
 	-webkit-print-color-adjust:exact;
 }
+
+.OpenFlowTool img {
+	padding: 3px;
+}
